[RED}: Add new tests that replace from the old one in Report Rest Controller test.